--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,20 +1,17 @@
 {
     "projectName": "qrcode",
-    "projectPath": "/home/splunk/qrcode",
-    "defaultEditor": "sublime",
-    "frontendHandler": {
-        "javascript": "/usr/lib/node_modules/@aws-amplify/cli/node_modules/amplify-frontend-javascript"
-    },
+    "version": "2.0",
+    "frontend": "javascript",
     "javascript": {
         "framework": "react",
         "config": {
             "SourceDir": "src",
             "DistributionDir": "build",
-            "BuildCommand": "npm run-script build",
-            "StartCommand": "npm run-script start"
+            "BuildCommand": "npm.cmd run-script build",
+            "StartCommand": "npm.cmd run-script start"
         }
     },
-    "providers": {
-        "awscloudformation": "/usr/lib/node_modules/@aws-amplify/cli/node_modules/amplify-provider-awscloudformation"
-    }
+    "providers": [
+        "awscloudformation"
+    ]
 }
