--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "aws-amplify": "^1.2.4",
     "aws-amplify-react": "^2.5.4",
-    "bitcore-lib": "^8.12.0",
-    "bitcore-mnemonic": "^8.12.0",
+    "bitcore-lib": "^8.13.2",
+    "bitcore-mnemonic": "^8.13.2",
     "local-storage": "^1.4.2",
     "openpgp": "^4.7.1",
     "qrcode.react": "^0.9.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-image-file-resizer": "^0.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8"
