--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "arraybuffer-to-buffer": "0.0.7",
     "aws-amplify": "^1.2.4",
     "aws-amplify-react": "^2.5.4",
     "bitcore-lib": "^8.13.2",
     "bitcore-mnemonic": "^8.13.2",
     "local-storage": "^1.4.2",
+    "node-gzip": "^1.1.2",
     "openpgp": "^4.7.1",
     "qrcode.react": "^0.9.3",
     "react": "^16.12.0",
@@ -15,7 +17,8 @@
     "react-image-file-resizer": "^0.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "sha512": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
