--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ awsconfiguration.json
 amplifyconfiguration.json
 amplify-gradle-config.json
 amplifyxc.config
+
+#openpgp
+public/openpgp.worker.min.js
