--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,21 +1,47 @@
+name: 'Amplify Deploy'
 on: [push]
 
-- name: amplify-cli-action
-  uses: ambientlight/amplify-cli-action@0.2.0
-  with:
-    # the root project directory: use it if you amplify project is not this repo root directory
-    project_dir: # optional
-    # front-end source location where aws_exports.js will be generated
-    source_dir: # optional, default is src
-    # front-end artifacts deployment directory that gets uploaded to S3 during amplify publish
-    distribution_dir: # optional, default is dist
-    # a build command to run with amplify publish (to build front-end deployment artifacts)
-    build_command: # optional, default is npm run build
-    # amplify environment to use
-    amplify_env: dev
-    # amplify command: SUPPORTED: [configure, push, publish, status, add_env, delete_env]
-    amplify_command: publish
-    # version of amplify/cli used
-    amplify_cli_version: # optional
-    # deletion protection: explicitly set this to false if you want amplify delete to work
-    delete_lock: # optional, default is true
+jobs:
+  test:
+    name: test amplify-cli-action
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [10.x]
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: use node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: configure amplify
+      uses: ambientlight/amplify-cli-action@v0.2.0
+      with:
+        amplify_command: configure
+        amplify_env: prod
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: us-east-1
+
+    - name: install, build and test
+      run: |
+        npm install
+        # build and test
+        # npm run build
+        # npm run test
+    
+    - name: deploy
+      uses: ambientlight/amplify-cli-action@v0.2.0
+      with:
+        amplify_command: publish
+        amplify_env: prod
+        build_command: 'npm run build'
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: us-east-1
