--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,7 @@ jobs:
       uses: ambientlight/amplify-cli-action@v0.2.0
       with:
         amplify_command: configure
-        amplify_env: prod
+        amplify_env: dev
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
