--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: configure amplify
-      uses: ambientlight/amplify-cli-action@v0.2.0
+      uses: ambientlight/amplify-cli-action@0.2.0
       with:
         amplify_command: configure
         amplify_env: dev
