--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
         # npm run test
     
     - name: deploy
-      uses: ambientlight/amplify-cli-action@v0.2.0
+      uses: ambientlight/amplify-cli-action@0.2.0
       with:
         amplify_command: publish
         amplify_env: prod
