--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-gzip": "^1.1.2",
     "openpgp": "^4.10.1",
     "qrcode.react": "^0.9.3",
+    "query-string": "^6.11.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-image-file-resizer": "^0.2.1",
