--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-image-file-resizer": "^0.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "2.1.8",
-    "sha512": "0.0.1"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "cp node_modules/openpgp/dist/compat/openpgp.worker.min.js public/ && react-scripts start",
